<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_deep"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    tools:context="com.example.administrator.dimine_sis.ModifyPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout style="@style/TitleHeight">

            <ImageView
                android:id="@+id/modify_password_back"
                android:layout_width="80px"
                android:layout_height="80px"
                android:layout_centerVertical="true"
                android:background="@drawable/back" />

            <TextView
                style="@style/TitleTextStyle"
                android:text="@string/modify_password_title_name" />


        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50px"
            android:layout_marginTop="50px"
            android:text="@string/modify_password_old"
            android:textColor="@color/blue_deep" />

        <EditText
            android:id="@+id/modify_password_old_etv"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:layout_margin="40px"
            android:background="@drawable/editext_yb"
            android:hint="@string/modify_password_hint_old"
            android:paddingLeft="20px"
            android:textColorHint="@color/gray_deep" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50px"
            android:text="@string/modify_password_new"
            android:textColor="@color/blue_deep" />

        <EditText
            android:id="@+id/modify_password_new_etv"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:layout_margin="40px"
            android:background="@drawable/editext_yb"
            android:hint="@string/modify_password_hint_new"
            android:paddingLeft="20px"
            android:textColorHint="@color/gray_deep" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50px"
            android:text="@string/modify_password_again"
            android:textColor="@color/blue_deep" />

        <EditText
            android:id="@+id/modify_password_again_etv"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:layout_margin="40px"
            android:background="@drawable/editext_yb"
            android:hint="@string/modify_password_hint_again"
            android:paddingLeft="20px"
            android:textColorHint="@color/gray_deep" />


        <Button
            android:id="@+id/modify_password_submit_btn"
            android:layout_width="300px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/modify_password_btn"
            android:text="@string/modify_password_btn_text"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>
